# ORB-SLAM3-ROS2-Docker

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  download_euroc.sh  ros_env_vars.sh
.github/workflows/: build-humble-image.yml
container_root/: .bash_history  .bashrc  .gitconfig  .tmux.conf  .viminfo  launch_slam.sh  launch_slam_traversability.sh  monitor_cpu.py  orb_slam3.rviz  traversability.rviz
container_root/.ros/: cyclonedds.xml
container_root/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
container_root/install/orb_slam3_ros2_wrapper/lib/orb_slam3_ros2_wrapper/: rgbd
container_root/install/orb_slam3_ros2_wrapper/share/ament_index/resource_index/parent_prefix_path/: orb_slam3_ros2_wrapper
container_root/install/orb_slam3_ros2_wrapper/share/orb_slam3_ros2_wrapper/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
container_root/install/orb_slam3_ros2_wrapper/share/orb_slam3_ros2_wrapper/cmake/: orb_slam3_ros2_wrapperConfig.cmake
container_root/install/orb_slam3_ros2_wrapper/share/orb_slam3_ros2_wrapper/launch/: rgbd.launch.py  unirobot.launch.py
container_root/install/orb_slam3_ros2_wrapper/share/orb_slam3_ros2_wrapper/params/: rgbd-ros-params.yaml
container_root/install/slam_msgs/include/slam_msgs/slam_msgs/msg/: key_frame.h  key_frame.hpp  map_data.hpp  map_graph.h  map_point.hpp  rosidl_typesupport_introspection_c__visibility_control.h
container_root/install/slam_msgs/include/slam_msgs/slam_msgs/msg/detail/: key_frame__functions.c  key_frame__functions.h  key_frame__rosidl_typesupport_fastrtps_cpp.hpp  key_frame__struct.hpp  key_frame__type_support.c  key_frame__type_support.h  map_data__builder.hpp  map_data__functions.c  map_data__rosidl_typesupport_fastrtps_cpp.hpp  map_data__rosidl_typesupport_introspection_c.h  map_data__rosidl_typesupport_introspection_cpp.hpp  map_data__struct.h  map_data__type_support.c  map_data__type_support.h  map_graph__functions.c  map_graph__rosidl_typesupport_fastrtps_c.h  map_graph__rosidl_typesupport_introspection_c.h  map_graph__struct.h  map_graph__traits.hpp  map_point__functions.h  map_point__rosidl_typesupport_fastrtps_cpp.hpp  map_point__struct.h  (+1 more)
container_root/install/slam_msgs/include/slam_msgs/slam_msgs/srv/: get_landmarks_in_view.h  get_landmarks_in_view.hpp
container_root/install/slam_msgs/share/ament_index/resource_index/rosidl_interfaces/: slam_msgs
container_root/install/slam_msgs/share/slam_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
container_root/install/slam_msgs/share/slam_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_slam_msgs__rosidl_generator_pyExport.cmake  export_slam_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  slam_msgsConfig.cmake  slam_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
container_root/install/slam_msgs/share/slam_msgs/msg/: KeyFrame.idl  MapPoint.idl
container_root/install/slam_msgs/share/slam_msgs/srv/: GetLandmarksInView.idl  GetLandmarksInView_Request.msg  GetLandmarksInView_Response.msg  GetMap.idl  GetMap_Response.msg
container_root/log/: latest_build
container_root/shell_scripts/: build_full.sh  docker_install.sh  launch_orb.sh  multi_orb.sh  vscode_install.sh
orb_slam3_map_generator/: CMakeLists.txt  package.xml
orb_slam3_map_generator/launch/: map_generator.launch.py
orb_slam3_map_generator/param/: map_generator_params.yaml
orb_slam3_map_generator/scripts/: stitch_pcl_client.py
orb_slam3_map_generator/src/: color_pcl.cpp  depth_image_to_pcl.cpp  get_landmarks_simulator.cpp  stitch_pcl.cpp
orb_slam3_ros2_wrapper/: CMakeLists.txt  package.xml
orb_slam3_ros2_wrapper/CMakeModules/: FindORB_SLAM3.cmake
orb_slam3_ros2_wrapper/include/: orb_slam3_interface.hpp
orb_slam3_ros2_wrapper/include/orb_slam3_ros2_wrapper/: orb_slam3_interface.hpp  ros_common.hpp  slam_node_base.hpp  time_profiler.hpp  type_conversion.hpp
orb_slam3_ros2_wrapper/launch/: mono.launch.py  mono_imu.launch.py  rgbd.launch.py  rgbd_imu.launch.py  stereo.launch.py  stereo_imu.launch.py  unirobot.launch.py
orb_slam3_ros2_wrapper/params/: gazebo_rgbd.yaml  imu-mono-ros-params.yaml  imu-rgbd-ros-params.yaml  orbbec_astra.yaml  rgbd-ros-params.yaml  zed2i.yaml  zed2i_kratos.yaml
orb_slam3_ros2_wrapper/params/orb_slam3_params/: euroc_stereo.yaml  gazebo_mono_imu.yaml  gazebo_rgbd.yaml  gazebo_rgbd_imu.yaml
orb_slam3_ros2_wrapper/params/ros_params/: euroc-mono-ros-params.yaml  euroc-stereo-imu-ros-params.yaml  euroc-stereo-ros-params.yaml  gazebo-mono-imu-ros-params.yaml  gazebo-rgbd-ros-params.yaml  gazebo-stereo-ros-params.yaml
orb_slam3_ros2_wrapper/scripts/: get_landmarks_for_pose.py  monitor_cpu_ram.sh  viz_keyframes.py
orb_slam3_ros2_wrapper/src/: orb_slam3_interface.cpp  slam_node_base.cpp  time_profiler.cpp  type_conversion.cpp
orb_slam3_ros2_wrapper/src/mono/: mono-slam-node.cpp  mono-slam-node.hpp  mono.cpp
orb_slam3_ros2_wrapper/src/mono-imu/: mono-imu-slam-node.cpp  mono-imu-slam-node.hpp  mono_imu.cpp
orb_slam3_ros2_wrapper/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp  rgbd.cpp
orb_slam3_ros2_wrapper/src/rgbd-imu/: rgbd-imu-slam-node.cpp  rgbd-imu-slam-node.hpp  rgbd_imu.cpp
orb_slam3_ros2_wrapper/src/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp  stereo.cpp
orb_slam3_ros2_wrapper/src/stereo-imu/: stereo-imu-slam-node.cpp  stereo-imu-slam-node.hpp  stereo_imu.cpp
orb_slam3_ros2_wrapper/tests/: typeConversionsTests.cpp
slam_map_poller/: package.xml  setup.cfg  setup.py
slam_map_poller/slam_map_poller/: poller_node.py
slam_msgs/: CMakeLists.txt
slam_msgs/msg/: KeyFrame.msg  MapData.msg  MapPoint.msg  SlamInfo.msg
slam_msgs/srv/: GetAllLandmarksInMap.srv  GetGlobalPointCloud.srv  GetLandmarksInView.srv  GetMap.srv
(+22 files in other folders)
