<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3_map_generator</name>
  <version>1.0.0</version>
  <description>Map Generator for ORB_SLAM3 library</description>
  <maintainer email="rssuchetan@gmail.com">Suchetan Saravanan</maintainer>
  <license>MIT</license>
  <author>Suchetan Saravanan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Pangolin</depend>
  <depend>Sophus</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>slam_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
